--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-sudo: false
 language: ruby
 cache: bundler
 rvm:
   - 2.2
   - ruby-head
   - 2.1
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq xdotool
