Allow travis CI failure with ruby head

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ rvm:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq xdotool
+matrix:
+  allow_failures:
+    - rvm: ruby-head
