Fix travis CI build (xev is in x11-utils package)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   - 2.1
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq twm xdotool xev
+  - sudo apt-get install -qq twm x11-utils xdotool
 matrix:
   allow_failures:
     - rvm: ruby-head
