--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
+sudo: false
 language: ruby
 cache: bundler
 rvm:
   - 2.2
   - ruby-head
   - 2.1
-before_install:
-  - travis_retry sudo apt-get update -qq
-  - travis_retry sudo apt-get install -qq twm x11-utils xdotool
+addons:
+  apt:
+    packages:
+    - twm
+    - x11-utils
+    - xdotool
 matrix:
   fast_finish: true
   allow_failures:
