--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,44 @@
-sudo: false
-language: ruby
-cache: bundler
-rvm:
-  - 2.2
-  - ruby-head
-  - 2.1
+sudo: required
+dist: trusty
+language: c
 addons:
   apt:
     packages:
-    - twm
-    - x11-utils
-    - xdotool
-matrix:
-  fast_finish: true
-  allow_failures:
-    - rvm: ruby-head
+      - libxinerama-dev
+      - twm
+      - x11-utils
+      - xdotool
 notifications:
   email:
     - tj+travis_uh_wm@a13.fr
+
+env:
+  - RUBYVER=2.4-stable
+  - RUBYVER=2.3-stable
+  - RUBYVER=2.2-stable
+  - RUBYVER=2.1-stable
+cache:
+  directories:
+    - ${HOME}/.gem/travis
+    - ${HOME}/usr
+  timeout: 3600
+
+before_install:
+  - sudo apt-get --purge remove ruby\*
+  - rm -rf ~/.bash*
+  - unset gem GEM_HOME GEM_PATH RUBYOPT IRBRC
+  - export PATH=/bin:/usr/bin RB=$HOME/usr/bin/ruby
+  - test -x $RB || wget http://ftp.ruby-lang.org/pub/ruby/ruby-${RUBYVER}.tar.xz
+  - test -x $RB || tar xfJ ruby-*.tar.xz
+  - test -x $RB || cd ruby-*
+  - test -x $RB || ./configure --prefix=$HOME/usr --disable-install-doc --with-out-ext=tk
+  - test -x $RB || (make && make install)
+install:
+  - unset gem GEM_HOME GEM_PATH RUBYOPT IRBRC
+  - export GEM_HOME=~/.gem/travis GEM_PATH=~/.gem/travis
+  - export PATH=$GEM_HOME/bin:$HOME/usr/bin:/bin:/usr/bin
+  - cd $TRAVIS_BUILD_DIR
+  - gem install bundler
+  - bundle
+script:
+  - rake
