--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ env:
   - RUBYVER=2.4-stable
   - RUBYVER=2.3-stable
   - RUBYVER=2.2-stable
+matrix:
+  fast_finish: true
+  allow_failures:
+    - env: RUBYVER=2.2-stable
 cache:
   directories:
     - ${HOME}/.gem/travis
