Use cleaner environment on travis CI service
  We now can install Xvfb explicitly and remove workarounds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 dist: trusty
-language: generic
+language: minimal
 addons:
   apt:
     packages:
@@ -8,6 +8,7 @@ addons:
       - realpath
       - x11-utils
       - xdotool
+      - xvfb
 notifications:
   email:
     - tj+travis_uh_wm@a13.fr
